--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,28 @@
-# Compiled class file
-*.class
+target/
+.project
+.classpath
+.settings/
+s4hana_pipeline/
+.idea/
+*.iml
+.vscode/
+node_modules/
+.DS_Store
+**/credentials.*
+**/node_modules
+**/package-lock.json
 
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+fioriHtmlRunner.html
+.*/fioriHtmlRunner.html
+visual_ext_index.html
+/webapp/visual_ext_index.html
+extended_runnable_file.html
+.*/extended_runnable_file.html
+sap-ui-cachebuster-info.json
+mock_preview_sapui5.html
+.*/mock_preview_sapui5.html
+UIAdaptation_index.html
+changes_preview.js
+AppVariant_index.html
+APIExternalProducer.js
+.*/APIExternalProducer.js
