--- a/mta.yaml
+++ b/mta.yaml
@@ -2,7 +2,7 @@ ID: cloud-s4-sdk-book
 _schema-version: '2.0'
 version: 0.0.1
 modules:
- - name: srv
+ - name: srv-XX
    type: java
    path: srv
    parameters:
